# MusicDS

./: MusicDS_Project_Guide.md  README.md  package-lock.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/backend/[...path]/: route.ts
backend/: CMakeLists.txt  main.cpp  musicds_data.json  setup.ps1  simple_http.h
backend/data-structures/: avl_tree.cpp  avl_tree.h  binomial_heap.cpp  binomial_heap.h  bloom_filter.cpp  bloom_filter.h  bplus_tree.cpp  bplus_tree.h  doubly_linked_list.cpp  doubly_linked_list.h  fibonacci_heap.cpp  fibonacci_heap.h  leftist_tree.cpp  leftist_tree.h  pairing_heap.cpp  pairing_heap.h  patricia_trie.cpp  patricia_trie.h  red_black_tree.cpp  red_black_tree.h  skip_list.cpp  skip_list.h  splay_tree.cpp  splay_tree.h  suffix_array.cpp  suffix_array.h  treap.cpp  treap.h  trie.cpp  trie.h
components/: auth-modal.tsx  genre-selection.tsx  landing-page.tsx  player.tsx  search-bar.tsx  sidebar.tsx  song-card.tsx  song-sections.tsx
lib/: audio-context.tsx  auth-context.tsx  itunes-api.ts  music-context.tsx  types.ts
lib/data-structures/: avl-tree.ts  fibonacci-heap.ts  red-black-tree.ts  splay-tree.ts  threaded-bst.ts  trie.ts
report/: MusicDS_Report.tex
